--- a/index.html
+++ b/index.html
@@ -1,157 +1,167 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Página</title>
-  <link rel="stylesheet" href="./css/estilos.css">
-  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Deluxe</title>
+    <link rel="icon" type="image/png" href="./img/bbq.png"/>
+    <link rel="stylesheet" href="./css/estilos.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header" id="Inicio">
+      <img src="./img/bx-menu.svg" alt="" class="hamburguesa" />
+      <nav class="menu-navegacion">
+        <a href="#Inicio">Inicio</a>
+        <a href="#Menu">Menú</a>
+        <a href="#ubi">Ubicación</a>
+        <a href="#equipos">Sobre Nosotros</a>
+      </nav>
+      <div class="contenedor head">
+        <h1 class="deluxe">Deluxe</h1>
+        <h1 class="deluxe2">Fast Food and Delivery</h1>
+        <p>El amor se hace a fuego lento</p>
+      </div>
+    </header>
 
-  <header class="header" id="inicio">
-    <img src="./img/bx-menu.svg" alt="" class="hamburguesa">
-    <nav class="menu-navegacion">
-      <a href="#Inicio">Inicio</a>
-      <a href="#Menu">Menú</a>
-      <a href="#ubi">Ubicación</a>
-      <a href="#equipos">Sobre Nosotros</a>
-    </nav>
-    <div class="contenedor head">
-      <h1 class="deluxe">Deluxe</h1>
-      <h1 class="deluxe2">Fast Food and Delivery</h1>
-      <p>El amor se hace a fuego lento</p>
-    </div>
-  </header>
-
-  <main>
-
-    <section class="delivery">
-      <div class="contenedor contenedor-delivery">
-        <h2>Tenemos Delivery</h2>
-        <img src="./img/delivery.png" alt="" class="dad">
-    </div>
-    </section>
-
-    <section class="menu-comida" id="servicio">
-      <div class="contenedor">
-         <h2 class="subtitulo">Menú</h2>
-         <div class="contenedor-menu" id="Menu">
-           <div class="menu-1">
-            <h2 class="img-desc">Plato 1</h2>
-           <img src="img/plato1.jpg" alt="img-galeria" class="img-menu">
-           <p>4$</p>
-          </div>
-           <div class="menu-1">
-             <h2 class="img-desc">Plato 2</h2>
-           <img src="img/plato2.jpg" alt="img-galeria" class="img-menu">
-           <p>8$</p>
-          </div>
-           <div class="menu-1">
-            <h2 class="img-desc">Plato 3</h2>
-           <img src="img/plato3.jpg" alt="img-galeria" class="img-menu">
-           <p>Mediano 30$, Grande 70$</p>
-          </div>
-           <div class="menu-1">
-            <h2 class="img-desc">Plato 4</h2>
-           <img src="img/plato4.jpg" alt="img-galeria" class="img-menu">
-           <p>Mediano 6$, Grande 10$</p>
-          </div>
-           <div class="menu-1">
-            <h2 class="img-desc">Plato 5</h2>
-           <img src="img/plato5.jpg" alt="img-galeria" class="img-menu">
-           <p>6$</p>
-          </div>
-           <div class="menu-1">
-            <h2 class="img-desc">Plato 6</h2>
-           <img src="img/plato6.jpg" alt="img-galeria" class="img-menu">
-           <p>7$</p>
-          </div>
-         </div>
-        </div>
-    </section>
-
-    <section class="imagen-light">
-      <img src="./img/bx-x.svg" alt="" class="close">
-      <img src="" alt="agregar-imagen" class="agregar-imagen">
-    </section>
-
-<section class="ubicacion" id="ubi">
-  <h2 class="subtitulo">Ubicación</h2>
-  <div class="contenedor ubica">
-    <div class="desc-ubi">
-      <h3>Nos encontramos en la 11 carrera norte, a una cuadra diagonal al Churum Merú</h3>
-    </div>
-    <div class="mapa">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d573.4007337863413!2d-64.26132921884987!3d8.895375081321363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8dcd8175f91a83f3%3A0x6905537cc483b099!2sCarrera%2011%20Nte%2C%20El%20Tigre%206050%2C%20Anzo%C3%A1tegui!5e0!3m2!1ses-419!2sve!4v1608136607912!5m2!1ses-419!2sve" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </div>
-
-  </div>
-
-</section>
-
-    <section class="equipos" id="equipos">
-      <h2 class="subtitulo sub-equi">Nuestro Equipo</h2>
-      <section class="equipo">
-      <div class="cont-equipo">
-        <div class="nombres">
-          <h3> Carlos Fernandez</h3>
-        </div>
-        <img src="img/carloss.png" alt="" class="img-equipo">
-        <h3 class="img-desc">El Jefe</h3>
-        </div>
-      <div class="cont-equipo">
-        <div class="nombres">
-          <h3>Adriana Sarmiento</h3>
-        </div>
-        <img src="img/adri.png" alt="" class="img-equipo">
-        <h3 class="img-desc">Dulcera</h3>
-        </div>
-      <div class="cont-equipo">
-        <div class="nombres">
-          <h3>Alberto Sarmiento</h3>
-        </div>
-        <img src="img/tico.png" alt="" class="img-equipo">
-        <h3 class="img-desc">Chef</h3>
-        </div>
-      <div class="cont-equipo">
-        <div class="nombres">
-          <h3>Isabel Sarmiento</h3>
-        </div>
-        <img src="img/isa.png" alt="" class="img-equipo">
-        <h3 class="img-desc">Delivery</h3>
+    <main>
+      <section class="delivery">
+        <div class="contenedor contenedor-delivery">
+          <h2>Tenemos Delivery</h2>
+          <img src="./img/delivery.png" alt="" class="dad" />
         </div>
       </section>
-    </section>
 
+      <section class="menu-comida" id="servicio">
+        <div class="contenedor">
+          <h2 class="subtitulo">Nustros Mejores Platos</h2>
+          <div class="contenedor-menu" id="Menu">
+            <div class="menu-1" id="myBtn" >
+              <h2 class="img-desc">Plato 1</h2>
+              <img src="img/plato1.jpg" alt="4$" class="img-menu" id="myBtn"/>
+              <p>4$</p>
+            </div>
+            <div class="menu-1 myBtn" id="myBtn" >
+              <h2 class="img-desc">Plato 2</h2>
+              <img src="img/plato2.jpg" alt="8$" class="img-menu" id="myBtn2" />
+              <p>8$</p>
+            </div>
+             <div class="menu-1" id="myBtn">
+              <h2 class="img-desc">Plato 3</h2>
+              <img src="img/plato3.jpg" alt="Mediano 40$, Grande 7$" class="img-menu" id="myBtn3"/>
+              <p>Mediano 40$, Grande 7$</p>
+            </div>
+            <div class="menu-1" id="myBtn" >
+              <h2 class="img-desc">Plato 4</h2>
+              <img src="img/plato4.jpg" alt="Mediano 6$, Grande 10$" class="img-menu" />
+              <p>Mediano 6$, Grande 10$</p>
+            </div>
+            <div class="menu-1" id="myBtn" >
+              <h2 class="img-desc">Plato 5</h2>
+              <img src="img/plato5.jpg" alt="6$" class="img-menu" />
+              <p>6$</p>
+            </div>
+            <div class="menu-1" id="myBtn" >
+              <h2 class="img-desc">Plato 6</h2>
+              <img src="img/plato6.jpg" alt="7$" class="img-menu MyBtn" />
+              <p>7$</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  </main>
+      <section class="ubicacion" id="ubi">
+        <h2 class="subtitulo">Nos puedes encontrar en</h2>
+        <div class="contenedor ubica">
+          <div class="desc-ubi">
+            <h3>
+              Nos encontramos en la 11 carrera norte, a una cuadra diagonal al
+              Churum Merú
+            </h3>
+          </div>
+          <div class="mapa">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d573.4007337863413!2d-64.26132921884987!3d8.895375081321363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8dcd8175f91a83f3%3A0x6905537cc483b099!2sCarrera%2011%20Nte%2C%20El%20Tigre%206050%2C%20Anzo%C3%A1tegui!5e0!3m2!1ses-419!2sve!4v1608136607912!5m2!1ses-419!2sve"
+              width="600"
+              height="450"
+              frameborder="0"
+              style="border: 0"
+              allowfullscreen=""
+              aria-hidden="false"
+              tabindex="0"
+            ></iframe>
+          </div>
+        </div>
+      </section>
 
-<footer class="footer" id="foot">
-  <div class="contenedor contenedor-footer">
-  <div class="social-media">
-    <img src="./img/logo.png" alt="" class="footer-logo">
-    <div class="social">
-    <a href="#" class="social-media-icon">
-      <i class='bx bxl-whatsapp'></i>
-    </a>
-    <a href="#" class="social-media-icon">
-      <i class='bx bxl-instagram' ></i>
-    </a>
-  </div>
-  </div>
-  </div>
+      <section class="equipos" id="equipos">
+        <h2 class="subtitulo sub-equi">Nuestro Equipo</h2>
+        <section class="equipo">
+          <div class="cont-equipo">
+            <div class="nombres">
+              <h3>Carlos Fernandez</h3>
+            </div>
+            <img src="img/carloss.png" alt="" class="img-equipo" />
+            <h3 class="img-desc">El Jefe</h3>
+          </div>
+          <div class="cont-equipo">
+            <div class="nombres">
+              <h3>Adriana Sarmiento</h3>
+            </div>
+            <img src="img/adri.png" alt="" class="img-equipo" />
+            <h3 class="img-desc">Dulcera</h3>
+          </div>
+          <div class="cont-equipo">
+            <div class="nombres">
+              <h3>Alberto Sarmiento</h3>
+            </div>
+            <img src="img/tico.png" alt="" class="img-equipo" />
+            <h3 class="img-desc">Chef</h3>
+          </div>
+          <div class="cont-equipo">
+            <div class="nombres">
+              <h3>Isabel Sarmiento</h3>
+            </div>
+            <img src="img/isa.png" alt="" class="img-equipo" />
+            <h3 class="img-desc">Delivery</h3>
+          </div>
+        </section>
+      </section>
+    </main>
 
-  <div class="line">
+    <footer id="footer">
+      <div class="contenedor contenedor-footer">
+        <div class="footer-logo">
+          <img src="./img/logo.png" alt="">
+        </div>
+        <div class="#">
+          <a href="social-media-icon" class="social-media-icon">
+            <i class="bx bxl-whatsapp "></i>
+          </a>
+          <a href="https://www.instagram.com/deluxefastfoodanddelivery/" target="_blank" class="social-media-icon">
+            <i class="bx bxl-instagram "></i>
+          </a>
+        </div>
+      </div>
+    </footer>
 
-  </div>
-</footer>
-
-
-<script src="./js/lightbox.js"></script>
-<script src="./js/menu.js"></script>
-</body>
-
+    <div class="modal">
+      <span class="cerrar"><i class="fas fa-times"></i></span>
+      <div class="modalContent">
+        <img src="" class="modalImg" />
+        <span class="modalTxt"></span>
+      </div>
+    </div>
+    <script src="./js/menu.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="https://kit.fontawesome.com/7368c40b21.js" crossorigin="anonymous" ></script>
+  </body>
 </html>
