--- a/index.html
+++ b/index.html
@@ -85,7 +85,26 @@
               <p>7$</p>
             </div>
           </div>
+
+        <div class="extra">
+          <div class="bebidas">
+            <h1>Bebidas</h1>
+            <h2>Cerveza 3$</h2>
+            <h2>Refresco 1.5$</h2>
+            <h2>Jugo 1$</h2>
+          </div>
+
+          <div class="dulces">
+            <h1>CupCakes 1$</h1>
+            <h2>Pie de Auyama 2$</h2>
+            <h2>Quesillo 4$</h2>
+            <h2>Pie de Auyama 2$</h2>
+            <h2>Quesillo 4$</h2>
+          </div>
         </div>
+
+        </div>
+
       </section>
 
       <div class="separador"></div>
